Redid the pay command and REI Compat